Fix issue on mobile with margins

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -197,7 +197,12 @@ h1 {
   }
 
   .contact__img {
-    max-width: none;
+    max-width: 100%;
     margin: none;
+  }
+
+  main {
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 }
